# AdventOfCode-2024

./: .gitignore  pyproject.toml
aoc24/day_1/: part_1.py  part_2.py
aoc24/day_10/: part_1.py
aoc24/day_11/: sol.py
aoc24/day_12/: part_1.py  part_2.py
aoc24/day_13/: part_1.py  part_2.py
aoc24/day_14/: part_1.py  part_2.py
aoc24/day_15/: part_1.py  part_2.py
aoc24/day_17/: part_1.py  part_2.py
aoc24/day_18/: part_1.py  part_2.py  path.py
aoc24/day_19/: part_1.py  part_2.py
aoc24/day_2/: part_1.py  part_2.py
aoc24/day_20/: part_1.py
aoc24/day_22/: part_1.py  part_2.py
aoc24/day_23/: part_1.py  part_2.py
aoc24/day_24/: part_1.py
aoc24/day_3/: part_1.py  part_2.py
aoc24/day_4/: part_1.py  part_2.py
aoc24/day_5/: part_1.py  part_2.py
aoc24/day_6/: part_1.py  part_2.py
aoc24/day_7/: part_1.py  part_2.py
aoc24/day_8/: part_1.py
aoc24/day_9/: part_1.py  part_2.py
aoc24/utils/: matrix.py
