[tool.poetry]
name = "aoc24"
version = "0.1.0"
description = ""
authors = ["Luca <corbuccilu@gmail.com>"]
readme = "README.md"
packages = [
    { include = "aoc24" },
    { include = "**/*.py" },
]


[tool.poetry.dependencies]
python = "^3.10"
ruff = "^0.8.1"
numpy = "^2.1.3"
scipy = "^1.14.1"
pathfinding = "^1.0.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
